tests/ui/imports/ambiguous-panic.stderr
error: `panic` is ambiguous
  --> $DIR/ambiguous-panic.rs:9:5
   |
LL |     panic!();
   |     ^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #147319 <https://github.com/rust-lang/rust/issues/147319>
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
note: `panic` could refer to the macro imported here
  --> $DIR/ambiguous-panic.rs:6:5
   |
LL | use std::prelude::v1::*;
   |     ^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `panic` to disambiguate
   = help: or use `crate::panic` to refer to this macro unambiguously
note: `panic` could also refer to a macro from prelude
  --> $SRC_DIR/core/src/prelude/mod.rs:LL:COL
note: the lint level is defined here
  --> $DIR/ambiguous-panic.rs:1:9
   |
LL | #![deny(ambiguous_panic_imports)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

